debug projects path

--- a/json/projects-draft.json
+++ b/json/projects-draft.json
@@ -41,9 +41,9 @@
         ]
     },
     "encryption-decryption": {
-        "name": "Test (Under construction)",
-        "language": "",
-        "time": "",
+        "name": "Encryption Decryption (Under construction)",
+        "language": "C",
+        "time": "Sep 2021 - ",
         "demoURL": "",
         "githubURL": "",
         "description": "",
